--- a/chatAgain/MainPage.xaml
+++ b/chatAgain/MainPage.xaml
@@ -5,9 +5,18 @@
     xmlns:local="using:chatAgain"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d" Foreground="#FF0DB0E0">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="{ThemeResource ListPickerFlyoutPresenterSelectedItemForegroundThemeBrush}">
+        <Rectangle Fill="#FF0505DE" Grid.Row="2" HorizontalAlignment="Left" Height="100" Margin="0,199,0,0" Stroke="Black" VerticalAlignment="Top" Width="360"/>
+        <Rectangle Fill="#FF0606E4" Grid.Row="3" HorizontalAlignment="Left" Height="100" Margin="0,370,0,0" Stroke="Black" VerticalAlignment="Top" Width="360"/>
+        <TextBlock x:Name="textBlock" Grid.Row="1" HorizontalAlignment="Left" Margin="43,49,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="83" Width="222" Foreground="White" FontSize="24" FontFamily="Rockwell Extra Bold">
+            <Run Text="欢迎来到"/>
+            <LineBreak/>
+            <Run Text="chatAgain"/>
+        </TextBlock>
+        <TextBlock x:Name="textBlock1" Grid.Row="2" TextAlignment="Center" HorizontalAlignment="Center" Margin="0,231,10,0" TextWrapping="Wrap" Text="实时聊天" Height="37" Width="350" Foreground="White" FontSize="22" VerticalAlignment="Top"/>
+        <TextBlock x:Name="textBlock1_Copy" Grid.Row="3" TextAlignment="Center" HorizontalAlignment="Center" Margin="0,402,0,0" TextWrapping="Wrap" Text="发声练习" Height="37" Width="360" Foreground="White" FontSize="22" VerticalAlignment="Top"/>
 
     </Grid>
 </Page>
