--- a/chatAgain/chat3.xaml
+++ b/chatAgain/chat3.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="chatAgain.chatPage"
+    x:Class="chatAgain.chat3"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:chatAgain"
@@ -9,7 +9,7 @@
 
     <Grid>
         <Grid.Background>
-            <ImageBrush Stretch="Fill" ImageSource="Assets/Projects for Accessbility-02.png"/>
+            <ImageBrush Stretch="Fill" ImageSource="Assets/Projects for Accessbility-04.png"/>
         </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -39,9 +39,6 @@
                     </ListBoxItem>
                 </ListBox>
             </SplitView.Pane>
-            <SplitView.Content>
-                <Ellipse Fill="#FFC36464" HorizontalAlignment="Left" Height="84" Margin="140,68,0,0" Grid.Row="1" VerticalAlignment="Top" Width="84" Opacity="0" Tapped="Ellipse_Tapped"/>
-            </SplitView.Content>
         </SplitView>
     </Grid>
 </Page>
