--- a/chatAgain/qingjingmoni.xaml
+++ b/chatAgain/qingjingmoni.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="chatAgain.practicePage"
+    x:Class="chatAgain.qingjingmoni"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:chatAgain"
@@ -9,7 +9,7 @@
 
     <Grid>
         <Grid.Background>
-            <ImageBrush Stretch="Fill" ImageSource="Assets/Projects for Accessbility-07.png"/>
+            <ImageBrush Stretch="Fill" ImageSource="Assets/Projects for Accessbility-08.png"/>
         </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -19,7 +19,7 @@
             <Button Name="HamButton" FontFamily="Segoe MDL2 Assets" Content="&#xE700;" FontSize="36" Click="HamClick" Foreground="White" Background="#FF2C2C2C"/>
             <TextBlock FontSize="25" HorizontalAlignment="Center" Margin="65,10,38,0" Text="CHATAGAIN" VerticalAlignment="Top" Foreground="White" FontFamily="Segoe UI Semibold"/>
         </RelativePanel>
-        <SplitView Name ="SpVi" Grid.Row="1" DisplayMode="Overlay" OpenPaneLength="200" CompactPaneLength="56" HorizontalAlignment="Left" PaneBackground="LightGray" Opacity="0.4">
+        <SplitView Name ="SpVi" Grid.Row="1" DisplayMode="Overlay" OpenPaneLength="200" CompactPaneLength="56" HorizontalAlignment="Left" PaneBackground="LightGray">
             <SplitView.Pane>
                 <ListBox Background="#FF2C2C2C" SelectionMode="Single" Name="ListBox" SelectionChanged="listChange">
                     <ListBoxItem Name="main">
@@ -39,9 +39,6 @@
                     </ListBoxItem>
                 </ListBox>
             </SplitView.Pane>
-            <SplitView.Content>
-                <Rectangle Fill="#FFC36464" HorizontalAlignment="Left" Height="34" Margin="240,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="67" Tapped="Rectangle_Tapped" Opacity="0"/>
-            </SplitView.Content>
         </SplitView>
     </Grid>
 </Page>
