--- a/chatAgain/qingjing1.xaml
+++ b/chatAgain/qingjing1.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="chatAgain.qingjingmoni"
+    x:Class="chatAgain.qingjing1"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:chatAgain"
@@ -9,7 +9,7 @@
 
     <Grid>
         <Grid.Background>
-            <ImageBrush Stretch="Fill" ImageSource="Assets/Projects for Accessbility-08.png"/>
+            <ImageBrush Stretch="Fill" ImageSource="Assets/Projects for Accessbility-09.png"/>
         </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -40,8 +40,12 @@
                 </ListBox>
             </SplitView.Pane>
             <SplitView.Content>
-                <Rectangle Fill="#FFC36464" HorizontalAlignment="Left" Height="105" Margin="195,72,0,0" Grid.Row="1" VerticalAlignment="Top" Width="105" Tapped="Rectangle_Tapped" Opacity="0"/>
+                <Grid>
+                    <Image x:Name="image" HorizontalAlignment="Left" Height="40" Margin="160,408,0,0" Grid.Row="1" VerticalAlignment="Top" Width="40" Source="Assets/button_start-01.png" PointerPressed="image_PointerPressed" PointerReleased="image_PointerReleased"/>
+                    <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="72,453,0,0" TextAlignment="Center" TextWrapping="Wrap" Text="按下按钮，跟读以下文字" VerticalAlignment="Top" Width="220" Height="40" Foreground="White" FontFamily="Microsoft YaHei Light" FontSize="16"/>
+                </Grid>
             </SplitView.Content>
         </SplitView>
+        
     </Grid>
 </Page>
