--- a/chatAgain/result.xaml
+++ b/chatAgain/result.xaml
@@ -1,11 +1,12 @@
 ﻿<Page
-    x:Class="chatAgain.qingjingmoni"
+    x:Class="chatAgain.result"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:chatAgain"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
+
 
     <Page.Transitions>
         <TransitionCollection>
@@ -16,10 +17,10 @@
             </NavigationThemeTransition>
         </TransitionCollection>
     </Page.Transitions>
-    
+
     <Grid>
         <Grid.Background>
-            <ImageBrush Stretch="Fill" ImageSource="Assets/Projects for Accessbility-08.png"/>
+            <ImageBrush Stretch="Fill" ImageSource="Assets/Projects for Accessbility-11.png"/>
         </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -50,7 +51,7 @@
                 </ListBox>
             </SplitView.Pane>
             <SplitView.Content>
-                <Rectangle Fill="#FFC36464" HorizontalAlignment="Left" Height="105" Margin="195,72,0,0" Grid.Row="1" VerticalAlignment="Top" Width="105" Tapped="Rectangle_Tapped" Opacity="0"/>
+                <Ellipse Fill="#FFC36464" HorizontalAlignment="Left" Height="67" Margin="225,388,0,0" Grid.Row="1" VerticalAlignment="Top" Width="67" Opacity="0" Tapped="Ellipse_Tapped"/>
             </SplitView.Content>
         </SplitView>
     </Grid>
