--- a/chatAgain/qita.xaml
+++ b/chatAgain/qita.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="chatAgain.practicePage"
+    x:Class="chatAgain.qita"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:chatAgain"
@@ -9,7 +9,7 @@
 
     <Grid>
         <Grid.Background>
-            <ImageBrush Stretch="Fill" ImageSource="Assets/短句.png"/>
+            <ImageBrush Stretch="Fill" ImageSource="Assets/其他.png"/>
         </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -40,7 +40,10 @@
                 </ListBox>
             </SplitView.Pane>
             <SplitView.Content>
-                <Rectangle Fill="#FFC36464" HorizontalAlignment="Left" Height="34" Margin="240,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="67" Tapped="Rectangle_Tapped" Opacity="0"/>
+                <Grid>
+                    <Rectangle Fill="#FFC36464" HorizontalAlignment="Left" Height="34" Margin="145,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="67" Tapped="Rectangle_Tapped" Opacity="0"/>
+                    <Rectangle x:Name="qingjing_rec" Fill="#FFC36464" HorizontalAlignment="Left" Height="145" Margin="0,225,-49,0" VerticalAlignment="Top" Width="360" Tapped="qingjing_rec_Tapped" Opacity="0"/>
+                </Grid>
             </SplitView.Content>
         </SplitView>
     </Grid>
